--- a/search.html
+++ b/search.html
@@ -5,22 +5,96 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Void Search</title>
   <style>
-    body {
-      background-color: #0f0f0f;
-      color: #fff;
-      font-family: Arial, sans-serif;
+    * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
+    }
+    html, body {
+      height: 100%;
+      overflow: hidden;
+    }
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #0f0f0f;
+      color: #fff;
       display: flex;
       justify-content: center;
+      align-items: center;
     }
-
-    .container {
-      max-width: 540px;
+    .layout-wrapper {
+      display: flex;
+      align-items: center;
+      justify-content: center;
       width: 100%;
+      max-width: 1600px;
+      height: 100vh;
+    }
+    #live-stats {
+      flex-shrink: 0;
+      width: 180px;
+      margin-right: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      padding: 10px;
+      background-color: #1a1a1a;
+      border-radius: 12px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.5);
+      position: sticky;
+      top: 20px;
+      height: fit-content;
+      font-size: 0.85rem;
+      line-height: 1.6;
+    }
+    #app-frame {
+      width: min(645px, 95vw);
+      height: 100vh;
+      background-color: #0f0f0f;
+      border-radius: 20px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.3);
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      position: relative;
+    }
+    .content-wrapper {
+      flex: 1;
+      overflow-y: auto;
       padding: 1rem;
+      padding-bottom: 80px;
+    }
+    .content-wrapper::-webkit-scrollbar {
+      width: 8px;
+    }
+    .content-wrapper::-webkit-scrollbar-track {
+      background: transparent;
+    }
+    .content-wrapper::-webkit-scrollbar-thumb {
+      background-color: rgba(100, 100, 100, 0.3);
+      border-radius: 4px;
+    }
+    .bottom-nav {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background-color: #1a1a1a;
+      border-top: 1px solid #333;
+      display: flex;
+      justify-content: space-around;
+      padding: 0.5rem 0;
+      z-index: 10;
+      border-bottom-left-radius: 20px;
+      border-bottom-right-radius: 20px;
+    }
+    .bottom-nav a {
+      color: #888;
+      text-decoration: none;
+      font-size: 1.3rem;
     }
 
+    /* Styles from your original search page */
     h2 {
       margin-top: 1rem;
       font-size: 1.2rem;
@@ -79,185 +153,151 @@
       font-size: 1.3rem;
       margin-right: 0.3rem;
     }
-
-    .bottom-nav {
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      background-color: #1a1a1a;
-      border-top: 1px solid #333;
-      display: flex;
-      justify-content: space-around;
-      padding: 0.5rem 0;
-    }
-
-    .bottom-nav a {
-      color: #888;
-      text-decoration: none;
-      font-size: 1.3rem;
-    }
-
-    .live-counter {
-      position: fixed;
-      font-size: 0.9rem;
-      color: #666;
-      background-color: #1a1a1a;
-      padding: 6px 10px;
-      border-radius: 6px;
-      border: 1px solid #333;
-      z-index: 999;
-      right: 10px;
-    }
-    #scroll-counter { bottom: 50px; }
-    #like-counter { bottom: 80px; }
-    #comment-counter { bottom: 110px; }
-    #repost-counter { bottom: 140px; }
-    #bookmark-counter { bottom: 170px; }
-    #reel-counter { bottom: 200px; }
-    #story-counter { bottom: 230px; }
-    #profile-counter { bottom: 260px; }
-    #post-counter { bottom: 290px; }
-    #time-counter { bottom: 320px; }
-    .leaderboard-item:last-child {
-      margin-bottom: 80px;
-    }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h2>Accounts</h2>
-    <div id="account-container"></div>
-    <button id="toggleAccounts" onclick="toggleAccountView()">Show More</button>
+  <div class="layout-wrapper">
+    <!-- Live Stats Sidebar -->
+    <div id="live-stats">
+      <div>Scrolls Done: <span id="stat-scrolls">0</span></div>
+      <div>Likes Given: <span id="stat-likes">0</span></div>
+      <div>Comments Given: <span id="stat-comments">0</span></div>
+      <div>Reposts Done: <span id="stat-reposts">0</span></div>
+      <div>Bookmarks: <span id="stat-bookmarks">0</span></div>
+      <div>Reels Viewed: <span id="stat-reels">0</span></div>
+      <div>Stories Viewed: <span id="stat-stories">0</span></div>
+      <div>Profiles Visited: <span id="stat-profiles">0</span></div>
+      <div>Posts Posted: <span id="stat-posts">0</span></div>
+      <div>Minutes Wasted: <span id="stat-minutes">0</span></div>
+    </div>
 
-    <h2>Leaderboard</h2>
-    <div id="leaderboard"></div>
-  </div>
+    <!-- App Frame -->
+    <div id="app-frame">
+      <div class="content-wrapper">
+        <h2>Accounts</h2>
+        <div id="account-container"></div>
+        <button id="toggleAccounts" onclick="toggleAccountView()">Show More</button>
 
-  <div id="scroll-counter" class="live-counter"></div>
-  <div id="like-counter" class="live-counter"></div>
-  <div id="comment-counter" class="live-counter"></div>
-  <div id="repost-counter" class="live-counter"></div>
-  <div id="bookmark-counter" class="live-counter"></div>
-  <div id="reel-counter" class="live-counter"></div>
-  <div id="story-counter" class="live-counter"></div>
-  <div id="profile-counter" class="live-counter"></div>
-  <div id="post-counter" class="live-counter"></div>
-  <div id="time-counter" class="live-counter"></div>
+        <h2>Leaderboard</h2>
+        <div id="leaderboard"></div>
+      </div> <!-- closes .content-wrapper -->
 
-  <div class="bottom-nav">
-    <a href="index.html">🏠</a>
-    <a href="search.html">🔍</a>
-    <a href="publish.html">➕</a>
-    <a href="reels.html">🎞️</a>
-    <a href="profile.html">👤</a>
-  </div>
+      <div class="bottom-nav">
+        <a href="index.html">🏠</a>
+        <a href="search.html">🔍</a>
+        <a href="publish.html">➕</a>
+        <a href="reels.html">🎞️</a>
+        <a href="profile.html">👤</a>
+      </div>
 
-  <script>
-    const fakeAccounts = [
-      { name: "scrollqueen", desc: "Still scrolling... queen style." },
-      { name: "doomqueen", desc: "Likes the darkness." },
-      { name: "taplord", desc: "Taps everything. All the time." },
-      { name: "tapbot", desc: "Probably not human." },
-      { name: "glitchlord", desc: "Exists between frames." },
-      { name: "noiserider", desc: "Tunes into static only." },
-      { name: "pixelpirate", desc: "Stealing screen space." },
-      { name: "feedghost", desc: "Lurks and vanishes." },
-      { name: "drainwave", desc: "Drained and proud." }
-    ];
+      <script>
+        const fakeAccounts = [
+          { name: "scrollqueen", desc: "Still scrolling... queen style." },
+          { name: "doomqueen", desc: "Likes the darkness." },
+          { name: "taplord", desc: "Taps everything. All the time." },
+          { name: "tapbot", desc: "Probably not human." },
+          { name: "glitchlord", desc: "Exists between frames." },
+          { name: "noiserider", desc: "Tunes into static only." },
+          { name: "pixelpirate", desc: "Stealing screen space." },
+          { name: "feedghost", desc: "Lurks and vanishes." },
+          { name: "drainwave", desc: "Drained and proud." }
+        ];
 
-    let showAllAccounts = false;
+        let showAllAccounts = false;
 
-    function renderAccounts() {
-      const container = document.getElementById("account-container");
-      container.innerHTML = "";
-      container.innerHTML += `
-        <a href="profile.html" class="account highlight">
-          <img src="https://api.dicebear.com/7.x/personas/svg?seed=you" alt="@you">
-          <div class="account-info">
-            <div class="name">@you</div>
-            <div class="desc">Just wasting time on purpose.</div>
-          </div>
-        </a>`;
+        function renderAccounts() {
+          const container = document.getElementById("account-container");
+          container.innerHTML = "";
+          container.innerHTML += `
+            <a href="profile.html" class="account highlight">
+              <img src="https://api.dicebear.com/7.x/personas/svg?seed=you" alt="@you">
+              <div class="account-info">
+                <div class="name">@you</div>
+                <div class="desc">Just wasting time on purpose.</div>
+              </div>
+            </a>`;
 
-      const shownAccounts = showAllAccounts ? fakeAccounts : fakeAccounts.slice(0, 5);
-      shownAccounts.forEach(account => {
-        const div = document.createElement("a");
-        div.className = "account";
-        div.href = `user.html?user=${account.name}`;
-        div.innerHTML = `
-          <img src="https://api.dicebear.com/7.x/personas/svg?seed=${account.name}">
-          <div class="account-info">
-            <div class="name">@${account.name}</div>
-            <div class="desc">${account.desc}</div>
-          </div>`;
-        container.appendChild(div);
-      });
-      document.getElementById("toggleAccounts").textContent = showAllAccounts ? "Show Less" : "Show More";
-    }
+          const shownAccounts = showAllAccounts ? fakeAccounts : fakeAccounts.slice(0, 5);
+          shownAccounts.forEach(account => {
+            const div = document.createElement("a");
+            div.className = "account";
+            div.href = `user.html?user=${account.name}`;
+            div.innerHTML = `
+              <img src="https://api.dicebear.com/7.x/personas/svg?seed=${account.name}">
+              <div class="account-info">
+                <div class="name">@${account.name}</div>
+                <div class="desc">${account.desc}</div>
+              </div>`;
+            container.appendChild(div);
+          });
+          document.getElementById("toggleAccounts").textContent = showAllAccounts ? "Show Less" : "Show More";
+        }
 
-    function toggleAccountView() {
-      showAllAccounts = !showAllAccounts;
-      renderAccounts();
-    }
+        function toggleAccountView() {
+          showAllAccounts = !showAllAccounts;
+          renderAccounts();
+        }
 
-    const leaderboardUsers = [
-      { name: "you", highlight: true, values: [123, 43, 87, 14, 6, 10, 322, 15, 8, 119] },
-      { name: "scrollqueen", values: [90, 35, 120, 8, 2, 5, 300, 10, 4, 100] },
-      { name: "doomqueen", values: [60, 28, 100, 12, 3, 9, 270, 18, 6, 92] },
-      { name: "taplord", values: [85, 40, 150, 7, 5, 6, 310, 14, 9, 111] },
-      { name: "tapbot", values: [100, 25, 95, 10, 6, 7, 290, 9, 5, 87] },
-      { name: "glitchlord", values: [72, 30, 130, 9, 4, 4, 280, 12, 6, 98] },
-      { name: "noiserider", values: [50, 22, 65, 5, 2, 3, 210, 8, 3, 70] },
-      { name: "pixelpirate", values: [98, 41, 155, 11, 7, 8, 340, 20, 10, 134] },
-      { name: "feedghost", values: [76, 29, 102, 6, 3, 6, 260, 13, 5, 90] },
-      { name: "drainwave", values: [83, 33, 111, 9, 4, 5, 285, 11, 7, 101] }
-    ];
+        const leaderboardUsers = [
+          { name: "you", highlight: true, values: [123, 43, 87, 14, 6, 10, 322, 15, 8, 119] },
+          { name: "scrollqueen", values: [90, 35, 120, 8, 2, 5, 300, 10, 4, 100] },
+          { name: "doomqueen", values: [60, 28, 100, 12, 3, 9, 270, 18, 6, 92] },
+          { name: "taplord", values: [85, 40, 150, 7, 5, 6, 310, 14, 9, 111] },
+          { name: "tapbot", values: [100, 25, 95, 10, 6, 7, 290, 9, 5, 87] },
+          { name: "glitchlord", values: [72, 30, 130, 9, 4, 4, 280, 12, 6, 98] },
+          { name: "noiserider", values: [50, 22, 65, 5, 2, 3, 210, 8, 3, 70] },
+          { name: "pixelpirate", values: [98, 41, 155, 11, 7, 8, 340, 20, 10, 134] },
+          { name: "feedghost", values: [76, 29, 102, 6, 3, 6, 260, 13, 5, 90] },
+          { name: "drainwave", values: [83, 33, 111, 9, 4, 5, 285, 11, 7, 101] }
+        ];
 
-    function renderLeaderboard() {
-      const container = document.getElementById("leaderboard");
-      container.innerHTML = "";
-      const stats = ["Reels", "Stories", "Likes", "Comments", "Reposts", "Bookmarks", "Scrolls", "Profiles", "Posts", "Time"];
+        function renderLeaderboard() {
+          const container = document.getElementById("leaderboard");
+          container.innerHTML = "";
+          const stats = ["Reels", "Stories", "Likes", "Comments", "Reposts", "Bookmarks", "Scrolls", "Profiles", "Posts", "Time"];
 
-      leaderboardUsers.forEach((user, i) => {
-        const div = document.createElement("div");
-        div.className = `leaderboard-item${user.highlight ? " highlight" : ""}`;
-        div.onclick = () => {
-          if (user.name === "you") {
-            window.location.href = "profile.html";
-          } else {
-            window.location.href = `user.html?user=${user.name}`;
-          }
-        };
-        const medal = i === 0 ? "🥇" : i === 1 ? "🥈" : i === 2 ? "🥉" : `${i + 1}.`;
-        div.innerHTML = `
-          <img src="https://api.dicebear.com/7.x/personas/svg?seed=${user.name}">
-          <div class="leaderboard-info">
-            <div class="name"><span class="medal">${medal}</span>@${user.name}</div>
-            <div class="stat-columns">
-              ${user.values.map((val, idx) => `<div>${stats[idx]}: ${val}</div>`).join("")}
-            </div>
-          </div>`;
-        container.appendChild(div);
-      });
-    }
+          leaderboardUsers.forEach((user, i) => {
+            const div = document.createElement("div");
+            div.className = `leaderboard-item${user.highlight ? " highlight" : ""}`;
+            div.onclick = () => {
+              if (user.name === "you") {
+                window.location.href = "profile.html";
+              } else {
+                window.location.href = `user.html?user=${user.name}`;
+              }
+            };
+            const medal = i === 0 ? "🥇" : i === 1 ? "🥈" : i === 2 ? "🥉" : `${i + 1}.`;
+            div.innerHTML = `
+              <img src="https://api.dicebear.com/7.x/personas/svg?seed=${user.name}">
+              <div class="leaderboard-info">
+                <div class="name"><span class="medal">${medal}</span>@${user.name}</div>
+                <div class="stat-columns">
+                  ${user.values.map((val, idx) => `<div>${stats[idx]}: ${val}</div>`).join("")}
+                </div>
+              </div>`;
+            container.appendChild(div);
+          });
+        }
 
-    function updateLiveStats() {
-      const get = key => parseInt(localStorage.getItem(key)) || 0;
-      document.getElementById("scroll-counter").textContent = `Scrolls done: ${get("scrollCount")}`;
-      document.getElementById("like-counter").textContent = `Likes given: ${get("likesGiven")}`;
-      document.getElementById("comment-counter").textContent = `Comments given: ${get("commentsGiven")}`;
-      document.getElementById("repost-counter").textContent = `Reposts done: ${get("repostsDone")}`;
-      document.getElementById("bookmark-counter").textContent = `Bookmarks: ${get("postsBookmarked")}`;
-      document.getElementById("reel-counter").textContent = `Reels viewed: ${get("reelsViewed")}`;
-      document.getElementById("story-counter").textContent = `Stories viewed: ${get("storiesViewed")}`;
-      document.getElementById("profile-counter").textContent = `Profiles visited: ${get("profilesVisited")}`;
-      document.getElementById("post-counter").textContent = `Posts posted: ${get("postsPosted")}`;
-      document.getElementById("time-counter").textContent = `Minutes wasted: ${Math.floor(get("secondsWasted") / 60)}`;
-    }
+        function updateLiveStats() {
+          const get = key => parseInt(localStorage.getItem(key)) || 0;
+          document.getElementById("stat-scrolls").textContent = get("scrollCount");
+          document.getElementById("stat-likes").textContent = get("likesGiven");
+          document.getElementById("stat-comments").textContent = get("commentsGiven");
+          document.getElementById("stat-reposts").textContent = get("repostsDone");
+          document.getElementById("stat-bookmarks").textContent = get("postsBookmarked");
+          document.getElementById("stat-reels").textContent = get("reelsViewed");
+          document.getElementById("stat-stories").textContent = get("storiesViewed");
+          document.getElementById("stat-profiles").textContent = get("profilesVisited");
+          document.getElementById("stat-posts").textContent = get("postsPosted");
+          document.getElementById("stat-minutes").textContent = Math.floor(get("secondsWasted") / 60);
+        }
 
-    renderAccounts();
-    renderLeaderboard();
-    updateLiveStats();
-  </script>
+        renderAccounts();
+        renderLeaderboard();
+        updateLiveStats();
+      </script>
+    </div> <!-- closes #app-frame -->
+  </div> <!-- closes .layout-wrapper -->
 </body>
 </html>
